Fix review comment