@@ -28,17 +28,15 @@ import javafx.scene.control.Button;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URI;
 
 public class DistributionClient extends Application {
 
-    private void connect(final Stage primaryStage, final URL endpoint) {
+    private void connect(final Stage primaryStage, final URI endpoint) {
         final ClientContextFactory clientContextFactory = PlatformClient.getService(ClientContextFactory.class);
-        try{
 
 
-        final ClientContext clientContext = clientContextFactory.create(PlatformClient.getClientConfiguration(), endpoint.toURI());
+        final ClientContext clientContext = clientContextFactory.create(PlatformClient.getClientConfiguration(), endpoint);
         clientContext.connect().handle((v, e) -> {
             if (e != null) {
                 e.printStackTrace();
@@ -57,9 +55,6 @@ public class DistributionClient extends Application {
             });
             return null;
         });
-        }catch(URISyntaxException ex){
-            ex.printStackTrace();
-        }
     }
 
     @Override
@@ -67,11 +62,11 @@ public class DistributionClient extends Application {
         FxToolkit.init();
 
         final Button server1Button = new Button("Server instance 1");
-        final URL server1Url = new URL("http://localhost:8082/distribution-app/dolphin");
+        final URI server1Url = new URI("http://localhost:8082/distribution-app/dolphin");
         server1Button.setOnAction(e -> connect(primaryStage, server1Url));
 
         final Button server2Button = new Button("Server instance 2");
-        final URL server2Url = new URL("http://localhost:8083/distribution-app/dolphin");
+        final URI server2Url = new URI("http://localhost:8083/distribution-app/dolphin");
         server2Button.setOnAction(e -> connect(primaryStage, server2Url));
 
         final VBox selectBox = new VBox(server1Button, server2Button);
